[gd_scene load_steps=8 format=3 uid="uid://b6mg25d1ghqnw"]

[ext_resource type="Script" uid="uid://dgrr2ds56ielo" path="res://Scripts/drawing_canvas.gd" id="1_2dl8l"]
[ext_resource type="Theme" uid="uid://6oxe1iage3rd" path="res://System_Theme.tres" id="1_utigh"]
[ext_resource type="PackedScene" uid="uid://b15qowanxn68w" path="res://Prefabs/pixel.tscn" id="2_52vop"]
[ext_resource type="Texture2D" uid="uid://mboc7pu8g862" path="res://Assets/Art/big.png" id="4_60jbv"]
[ext_resource type="Texture2D" uid="uid://dai1eqv766b5c" path="res://Assets/Art/medium.png" id="5_06ufb"]
[ext_resource type="Texture2D" uid="uid://ccypyy3eov105" path="res://Assets/Art/small.png" id="6_0dx5x"]

[sub_resource type="LabelSettings" id="LabelSettings_52vop"]
font_color = Color(0.243569, 0.243569, 0.243569, 1)

[node name="Drawing Canvas" type="Window"]
title = "Canvas"
position = Vector2i(640, 36)
size = Vector2i(512, 600)
transient = true
unresizable = true
content_scale_mode = 2
content_scale_aspect = 1
theme = ExtResource("1_utigh")
theme_override_font_sizes/title_font_size = 30
script = ExtResource("1_2dl8l")
pixel_prefab = ExtResource("2_52vop")

[node name="Finish" type="Button" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 43.0
grow_horizontal = 2
text = "Become"

[node name="Clear" type="Button" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 103.0
offset_top = 43.0
offset_bottom = 86.0
grow_horizontal = 2
size_flags_horizontal = 4
text = "Clear
"

[node name="Canvas" type="GridContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -208.0
offset_right = 256.0
offset_bottom = 299.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 64

[node name="BigBrush" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
anchors_preset = -1
anchor_left = 0.038
anchor_top = 0.104
anchor_right = 0.038
anchor_bottom = 0.104
offset_left = -17.456
offset_top = -19.4
offset_right = 15.544
offset_bottom = 20.6
icon = ExtResource("4_60jbv")

[node name="MediumBrush" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
anchors_preset = -1
anchor_left = 0.091
anchor_top = 0.101
anchor_right = 0.091
anchor_bottom = 0.101
offset_left = -7.592
offset_top = -17.6
offset_right = 22.408
offset_bottom = 23.4
icon = ExtResource("5_06ufb")

[node name="SmallBrush" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
anchors_preset = -1
anchor_left = 0.162
anchor_top = 0.099
anchor_right = 0.162
anchor_bottom = 0.099
offset_left = -13.944
offset_top = -17.4
offset_right = 21.056
offset_bottom = 24.6
icon = ExtResource("6_0dx5x")

[node name="Label" type="Label" parent="."]
offset_left = 6.0
offset_top = 573.0
offset_right = 518.0
offset_bottom = 602.0
text = "Left-click Draw - Right-click Erase"
label_settings = SubResource("LabelSettings_52vop")

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="Finish" to="." method="_on_finish_pressed"]
[connection signal="pressed" from="Clear" to="." method="on_clear"]
[connection signal="pressed" from="BigBrush" to="." method="set_brush_large"]
[connection signal="pressed" from="MediumBrush" to="." method="set_brush_medium"]
[connection signal="pressed" from="SmallBrush" to="." method="set_brush_small"]
